<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_16">

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/silver_s_20"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:padding="@dimen/margin_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_almost_there"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/str_almost_there"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_complete_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_12"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_complete_form"
            android:textColor="@color/carbon_c_300"
            android:textSize="@dimen/font_size_13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_almost_there" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_mandatory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_12"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_mandatory"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_complete_form" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_frist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_first_name"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            android:layout_marginTop="@dimen/margin_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_bg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tv_frist_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/margin_8"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_last_name"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_first_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tv_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/margin_8"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_email"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_last_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/margin_8"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/str_dob"
                    android:textColor="@color/carbon_c_100"
                    android:textSize="@dimen/font_size_11"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_last_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/margin_4"
                        android:text="DD/MM/YY"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:drawableEnd="@drawable/dob"
                        android:inputType="datetime"
                        android:textColor="@color/black"
                        android:paddingEnd="0dp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/chivo_regular"
                android:textSize="@dimen/font_size_13"
                android:thumb="@drawable/custom_thumb"
                app:showText="true"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginEnd="@dimen/margin_16"
                android:textOff="@string/str_female"
                android:textOn="@string/str_male"
                app:track="@drawable/custom_track" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_nationality"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_dob" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tv_nationality">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/margin_8"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_residence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_residence"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_nationality" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tv_residence">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_residence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/margin_8"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_mobile_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/chivo_regular"
            android:text="@string/str_mobile_no"
            android:textColor="@color/carbon_c_100"
            android:textSize="@dimen/font_size_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_residence" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/tv_mobile_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="@dimen/margin_40"
                android:paddingTop="@dimen/margin_8"
                android:inputType="number"
                android:textColor="@color/black"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+65"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/til_mobile_no"
            app:layout_constraintTop_toTopOf="@id/til_mobile_no"
            app:layout_constraintBottom_toBottomOf="@id/til_mobile_no"/>

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_marginStart="@dimen/margin_8"
            android:background="@color/silver_s_40"
            app:layout_constraintStart_toEndOf="@id/tv_country_code"
            app:layout_constraintTop_toTopOf="@id/til_mobile_no"
            app:layout_constraintBottom_toBottomOf="@id/til_mobile_no"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_acc"
            android:background="@drawable/bg_gradient"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/chivo_regular"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:text="@string/str_create_acc"
            app:layout_constraintTop_toBottomOf="@id/til_mobile_no"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_guitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/guitar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>